--- a/styles/style.css
+++ b/styles/style.css
@@ -5,6 +5,20 @@
   height:calc(var(--bili) * 80);
 }
 
+.t{position:fixed;
+  top:0px;
+  left:0px;
+  right:0px;
+}
+
+.c{position: absolute;
+    top:0;
+    right:0;
+    bottom:0;
+    left:0;
+    margin:auto;
+}
+
 .r{position:fixed;
   bottom:0px;
   left:0px;
