--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,8 @@
 .t{position:fixed;
-  top:0px;
-  left:0px;
-  right:0px;
+  top:0;
+  right:0;
+  left:0;
+  margin:auto;
 }
 
 .c{position:fixed;
@@ -12,15 +13,29 @@
     margin:auto;
 }
 
-.r{position:fixed;
-  bottom:0px;
-  left:0px;
-  right:0px;
-}
-
-.a{position:fixed;
+.b{position:fixed;
     right:0;
     bottom:0;
     left:0;
     margin:auto;
+}
+
+html{
+  font-size: 100px;
+}
+.rwdtxt {
+  font-size: 1.2rem;
+  color:green;
+}
+@media (min-width: 600px) and (max-width: 1200px) {
+  .rwdtxt {
+   font-size: calc(1.2rem + (1.3-1.2) * ((100vw - 600px) / (1200 - 600)));
+  color:blue;
+  }
+}
+@media (min-width: 1200px) {
+  .rwdtxt {
+     font-size: 1.3rem;
+     color:red;
+  }
 }
